--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+<div>
 <div class="header"><app-navbar></app-navbar></div>
 <img src="http://i64.tinypic.com/25810td.jpg" alt="logocsyllabus" border="0" width="500px" style="max-width:80%">
 <div class="logo"><p>CSyllabus is imagined as a web platform which should ease up process of finding and comparing courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way through web application. This “one click” app will save time and provide very useful information to interested parties.</p>
 </div>
 <h2 style="margin:30px;color:rgb(47, 75, 131);">Our Team</h2> 
 <div class="ourteam">
-    <div class="person">
+    <div class="row1">
         <div class="personname">
           <h2>Matej Vukosav</h2>
         </div>
@@ -18,10 +19,10 @@
             From 2015 I have been working as an Software engineer in different companies , mostly as Android developer.
             I'm also co-organizer of Google Developers Group Zagreb (GDG Zagreb)          
           </p>
-          <p>E-mail: matej.vukosav@fer.hr</p>
+          <p><b>E-mail:</b> matej.vukosav@fer.hr</p>
         </div>
       </div> 
-    <div class="person">
+    <div class="row1">
         <div>
           <h2>Thomas Benetti</h2>
         </div>
@@ -34,10 +35,10 @@
                 Skills and interests: Software engineer in apprenticeship with the engineering school 3iL 
                 Group in the telecom company Orange (France) for more than 2 years now
             </p>
-            <p>E-mail: matej.vukosav@fer.hr</p>
+            <p><b>E-mail:</b> thomas.benetti@mail.polimi.it</p>
           </div>
       </div>    
-    <div class="person">
+    <div class="row1">
         <div>
             <h2>Emanuel Guberovic</h2>
           </div>
@@ -47,13 +48,13 @@
             <p style="text-align:justify"> 
               Last year of master studies in computer engineering at FER, Croatia. 
               Love writing code and wondering why it actually works.
+              Skills and interests: full stack development, embedded engineering.
+              Hobbies: avid bird watching (jk).
             </p>
-            <p>E-mail: matej.vukosav@fer.hr</p>
+            <p><b>E-mail:</b> emanuel.guberovic@fer.hr</p>
           </div>
-      </div> 
-  
-  <b></b>
-    <div class="person">
+      </div>  
+    <div class="row2">
         <div>
             <h2>Zvonimir Relja</h2>
           </div>
@@ -63,11 +64,13 @@
             <p style="text-align:justify"> 
             23 years old from Croatia. 
             Currently on second year of Masters in Computer Engineering at FER, Zagreb.
+            Skills and interests: Fullstack web dev. and embedded engineering enthusiast.
+            Hobbies: Eating food. All of it.
             </p>
-            <p>E-mail: matej.vukosav@fer.hr</p>
+            <p><b>E-mail:</b> zvonimir.relja@fer.hr</p>
           </div>
         </div>   
-    <div class="person">
+    <div class="row2">
         <div>
             <h2>Filip Turčinović </h2>
           </div>
@@ -76,12 +79,13 @@
           <h3 style="text-align:center"> Full Stack Developer</h3> 
           <p style="text-align:justify">
               23, Sveti Petar u Šumi, Croatia, Computer Engineering
-              Skills and interests: Embedded systems, Web development
+              Skills and interests: Embedded systems, Web development              
+              Hobbies: football, drone flying
           </p>
-          <p>E-mail: filip.turcinovic@fer.hr</p>
+          <p><b>E-mail:</b> filip.turcinovic@fer.hr</p>
         </div>
       </div>   
-    <div class="person">
+    <div class="row2">
         <div>
             <h2>Adrien Roques</h2>
           </div>
@@ -91,12 +95,11 @@
           <p style="text-align:justify">
               i have 22 years old and i'm studiying Computer Science at polimi. 
               Currently, in France, i'm an apprentice-engineer at Airbus Defence and Space.
-              Skills and interests: Software-Engineering at Airbus Defence and Space since since 2 years
           </p>
-          <p>E-mail: adrien.roques.31@outlook.fr</p>
+          <p><b>E-mail:</b> adrien.roques.31@outlook.fr</p>
         </div>
       </div>  
-    <div class="person">
+    <div class="row3">
         <div>
             <h2>Sebastian Mayoral</h2>
         </div>
@@ -108,10 +111,10 @@
                 in Italy I´m studying the master degree in Computer Science and Engineering and 
                 in Colombia I have the degree in Industrial and Management Enginering.
               </p>
-            <p>E-mail: obandomayoral@gmail.com</p>
+            <p><b>E-mail:</b> obandomayoral@gmail.com</p>
             </div>
           </div>   
-    <div class="person">
+    <div class="row3">
         <div>
             <h2>Ivana Bosnić</h2>
           </div>
@@ -121,10 +124,10 @@
             <p style="text-align:justify">
                 Assistant professor, Department of Control and Computer Engineering
             </p>
-            <p>E-mail: ivana.bosnic@fer.hr</p>
+            <p><b>E-mail:</b> ivana.bosnic@fer.hr</p>
           </div>
         </div>  
-    <div class="person">
+    <div class="row3">
         <div>
             <h2>Raffaela Mirandola</h2>
           </div>
@@ -136,19 +139,20 @@
        degree in Computer Science from the University of Roma â€œTor Vergataâ€, Italy.
        She is currently assistant professor at the Politecnico di Milano. 
             </p>
-            <p>E-mail: raffaela.mirandola@polimi.it</p>
+            <p><b>E-mail:</b> raffaela.mirandola@polimi.it</p>
           </div>
         </div>  
-</div>
-<h2 style="margin:30px;color:rgb(47, 75, 131);">Vision</h2> 
-<div class="logo">
+</div >
+<div style="float:right;">
+    <h2 style="margin:30px;color:rgb(47, 75, 131);">Our Vision</h2> 
+<div class="general">
   <p>
       Our application will be used to help the students choose courses. For that, the student will be able to choose his home university and if he wants, his wanted destination (via city, country or faculty name), plus the courses he wants to select. He will be able to select them by typing keywords that represent the courses. Then the application will analyze his input and match it with input data from syllabuses to find him suitable faculties and courses.
       Our vision besides data gathering and analysis, is to add a community so that students can see feedback from previous students at the proposed universities and maybe contact them to have more informations. But also we would like to introduce to the student what he can see in the chosen city, the night life, the students’ occupations, etc      
   </p>
 </div>
-<h2 style="margin:30px;color:rgb(47, 75, 131);">Enviroment</h2> 
-<div class="logo">
+<h2 style="margin:30px;color:rgb(47, 75, 131);">Our Motivation</h2> 
+<div class="general">
   <p>
       Csyllabus is part of a set of projects purposed in the <a href="http://score-contest.org/2018/projects/csyllabus.php"> SCORE </a> competition 2018 edition. 
       The SCORE Contest is aimed at promoting and fostering software engineering in universities worldwide. 
@@ -157,5 +161,6 @@
       In order to accommodate a wide range of academic calendars, the SCORE 2018 Contest will run from May 2017 to January 2018.
       Finalist teams will be invited to <a href="https://conf.researchr.org/home/icse-2018/">ICSE</a> 2018 in Gothenburg, Sweden.   
   </p>
+</div>
 </div>
 <app-footer></app-footer>
