--- a/frontend/csyllabus/src/app/components/footer/footer.component.html
+++ b/frontend/csyllabus/src/app/components/footer/footer.component.html
@@ -1,20 +1,17 @@
 <footer class="footer-distributed">
-  
-          <div class="footer-right">
-          </div>
           <div class="logos">
-              <img style="background:white;border-radius:5px;max-width:33%;margin-left:3px;margin-right:3px;" src="http://larics.rasip.fer.hr/wp-content/uploads/2015/01/fer-logoEN-1-wide.png" height="70px">
-              <img style="background:white;border-radius:5px;max-width:33%;margin-left:3px;margin-right:3px;" src="https://marcobrambillapolimi.files.wordpress.com/2016/12/cropped-polimi-datascience-logo-square1.png" height="70px" >
-              <img style="background:white;border-radius:5px;max-width:33%;margin-left:3px;margin-right:3px;" src="https://goabroad.umbc.edu/_customtags/ct_Image.cfm?Image_ID=49231" height="70px">
+              <a href="http://www.fer.unizg.hr/"><img  class="logo" src="http://larics.rasip.fer.hr/wp-content/uploads/2015/01/fer-logoEN-1-wide.png" height="70px"></a>
+              <a href="https://www.polimi.it/home/"><img  class="logo" src="https://marcobrambillapolimi.files.wordpress.com/2016/12/cropped-polimi-datascience-logo-square1.png" height="70px" ></a>
+                <a href="http://www.mdh.se/?l=en_UK"><img  class="logo" src="https://goabroad.umbc.edu/_customtags/ct_Image.cfm?Image_ID=49231" height="70px"></a>
             </div>
           <div class="footer-left">
     
             <p class="footer-links">
-              <a href="#">EXPLORE & COMPARE</a>
+              <a href="core">EXPLORE & COMPARE</a>
               ·
-              <a href="#">ABOUT</a>
+              <a href="about">ABOUT</a>
               ·
-              <a href="#">DOCUMENTATION</a>
+              <a href="documentation">DOCUMENTATION</a>
               
             </p>
     
