--- a/frontend/csyllabus/src/app/components/footer/footer.component.css
+++ b/frontend/csyllabus/src/app/components/footer/footer.component.css
@@ -1,5 +1,8 @@
 .footer-distributed{
-	background-color: rgb(47, 75, 131);
+	background: -webkit-linear-gradient(bottom, rgb(83, 110, 163) ,rgb(47, 75, 131)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom,rgb(83, 110, 163),rgb(47, 75, 131)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom,rgb(83, 110, 163),rgb(47, 75, 131)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom, rgb(83, 110, 163), rgb(47, 75, 131)); /* Standard syntax */
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -7,8 +10,7 @@
     font: normal 16px sans-serif;
     float: right;
     position: relative;
-	padding: 45px 50px;
-	margin-top: 80px;
+	padding: 35px 40px;
 }
 
 .footer-distributed .footer-left p{
@@ -18,8 +20,17 @@
 }
 .logos{
 	float:right;
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
+	max-width: 100%;
+	text-align: right;
+}
+.logo{
+	background:white;
+	max-width:30%;
+	margin-left:1px;
+	margin-right:1px;
+	float: none;
 }
 /* Footer links */
 
@@ -66,6 +77,9 @@
 	.footer-distributed .footer-left,
 	.footer-distributed .footer-right{
 		text-align: center;
+	}
+	.logo{
+		float: none;
 	}
 	.logos{
 		text-align: center;
