--- a/frontend/csyllabus/src/app/components/about/about.component.css
+++ b/frontend/csyllabus/src/app/components/about/about.component.css
@@ -85,4 +85,17 @@ h2{
         margin-left:10px;
         margin-right:10px;
     }
+    .rowback{
+        background-color: rgba(242, 242, 242, 0.453) !important;
+    }
 } 
+hr { 
+    border-top: 3px solid rgb(116,153,227); 
+    border-left:none; 
+    border-right:none; 
+    border-bottom:none; 
+    height: 6px;
+    width:2%; 
+    margin-top: 50px;
+    margin-bottom: 50px;
+  } 
