--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -2,10 +2,12 @@
 <div>
 <div class="header"><app-navbar></app-navbar></div>
 <img src="http://i64.tinypic.com/25810td.jpg" alt="logocsyllabus" border="0" width="500px" style="max-width:80%">
-<div class="logo"><p>CSyllabus is imagined as a web platform which should ease up process of finding and comparing courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way through web application. This “one click” app will save time and provide very useful information to interested parties.</p>
+<div class="logo"><p>"CSyllabus is imagined as a web platform which should ease up process of finding and comparing courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way through web application. This “one click” app will save time and provide very useful information to interested parties."</p>
 </div>
+<hr>
 <h2 style="margin:30px;color:rgb(47, 75, 131);">Our Team</h2> 
-<div class="ourteam">
+<div class="ourteam" >
+  <div class="rowback">
     <div class="row1">
         <div class="personname">
           <h2>Matej Vukosav</h2>
@@ -53,7 +55,8 @@
             </p>
             <p><b>E-mail:</b> emanuel.guberovic@fer.hr</p>
           </div>
-      </div>  
+      </div> 
+  </div>   
     <div class="row2">
         <div>
             <h2>Zvonimir Relja</h2>
@@ -144,14 +147,16 @@
         </div>  
 </div >
 <div style="float:right;">
-    <h2 style="margin:30px;color:rgb(47, 75, 131);">Our Vision</h2> 
+<hr>
+    <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Vision</h1> 
 <div class="general">
   <p>
       Our application will be used to help the students choose courses. For that, the student will be able to choose his home university and if he wants, his wanted destination (via city, country or faculty name), plus the courses he wants to select. He will be able to select them by typing keywords that represent the courses. Then the application will analyze his input and match it with input data from syllabuses to find him suitable faculties and courses.
       Our vision besides data gathering and analysis, is to add a community so that students can see feedback from previous students at the proposed universities and maybe contact them to have more informations. But also we would like to introduce to the student what he can see in the chosen city, the night life, the students’ occupations, etc      
   </p>
 </div>
-<h2 style="margin:30px;color:rgb(47, 75, 131);">Our Motivation</h2> 
+<hr>
+<h1 style="margin:30px;color:rgb(47, 75, 131);">Our Motivation</h1> 
 <div class="general">
   <p>
       Csyllabus is part of a set of projects purposed in the <a href="http://score-contest.org/2018/projects/csyllabus.php"> SCORE </a> competition 2018 edition. 
