--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -1,3 +1,171 @@
-<p>
-  about works!
-</p>
+<!DOCTYPE html>
+<div>
+<div class="header"><app-navbar></app-navbar></div>
+<img src="http://i64.tinypic.com/25810td.jpg" alt="logocsyllabus" border="0" width="500px" style="max-width:80%">
+<div class="logo"><p>"CSyllabus is imagined as a web platform which should ease up process of finding and comparing courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way through web application. This “one click” app will save time and provide very useful information to interested parties."</p>
+</div>
+<hr>
+<h2 style="margin:30px;color:rgb(47, 75, 131);">Our Team</h2> 
+<div class="ourteam" >
+  <div class="rowback">
+    <div class="row1">
+        <div class="personname">
+          <h2>Matej Vukosav</h2>
+        </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/matej-vukosav.jpg" style="border-radius: 50%;" width="150px" height="150px">
+        <div class="content">
+          <h3 style="text-align:center">Product Owner</h3>          
+          <p style="text-align:justify"> 
+            I am 24 years old student from Faculty of Electrical Engineering and Computing in Zagreb. 
+            Currently on last year studying Software Engineering and Information System. 
+            From 2015 I have been working as an Software engineer in different companies , mostly as Android developer.
+            I'm also co-organizer of Google Developers Group Zagreb (GDG Zagreb)          
+          </p>
+          <p><b>E-mail:</b> matej.vukosav@fer.hr</p>
+        </div>
+      </div> 
+    <div class="row1">
+        <div>
+          <h2>Thomas Benetti</h2>
+        </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/IMG_8461.JPG" style="border-radius: 50%;" width="150px" height="150px">
+        <div class="content">
+            <h3 style="text-align:center">Scrum Master</h3>          
+            <p style="text-align:justify">
+              22 years old. I'm an Erasmus student at Polimi in Computer Science and Engineering for 6 months.
+               In France I am an apprentice-engineer in the telecom company Orange.
+                Skills and interests: Software engineer in apprenticeship with the engineering school 3iL 
+                Group in the telecom company Orange (France) for more than 2 years now
+            </p>
+            <p><b>E-mail:</b> thomas.benetti@mail.polimi.it</p>
+          </div>
+      </div>    
+    <div class="row1">
+        <div>
+            <h2>Emanuel Guberovic</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/guber.jpg" style="border-radius: 50%" width="150px" height="150px">
+        <div class="content">
+            <h3 style="text-align:center">Full Stack Developer</h3>          
+            <p style="text-align:justify"> 
+              Last year of master studies in computer engineering at FER, Croatia. 
+              Love writing code and wondering why it actually works.
+              Skills and interests: full stack development, embedded engineering.
+              Hobbies: avid bird watching (jk).
+            </p>
+            <p><b>E-mail:</b> emanuel.guberovic@fer.hr</p>
+          </div>
+      </div> 
+  </div>   
+    <div class="row2">
+        <div>
+            <h2>Zvonimir Relja</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/profilna.jpg" style="border-radius: 50%" width="150px" height="150px">
+        <div class="content">
+            <h3 style="text-align:center">Backend Developer</h3>          
+            <p style="text-align:justify"> 
+            23 years old from Croatia. 
+            Currently on second year of Masters in Computer Engineering at FER, Zagreb.
+            Skills and interests: Fullstack web dev. and embedded engineering enthusiast.
+            Hobbies: Eating food. All of it.
+            </p>
+            <p><b>E-mail:</b> zvonimir.relja@fer.hr</p>
+          </div>
+        </div>   
+    <div class="row2">
+        <div>
+            <h2>Filip Turčinović </h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/filip.jpg" style="border-radius: 50%" width="150px" height="150px">
+        <div class="content">
+          <h3 style="text-align:center"> Full Stack Developer</h3> 
+          <p style="text-align:justify">
+              23, Sveti Petar u Šumi, Croatia, Computer Engineering
+              Skills and interests: Embedded systems, Web development              
+              Hobbies: football, drone flying
+          </p>
+          <p><b>E-mail:</b> filip.turcinovic@fer.hr</p>
+        </div>
+      </div>   
+    <div class="row2">
+        <div>
+            <h2>Adrien Roques</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/Adrien%20Roques.png" style="border-radius: 50%" width="150px" height="150px">
+        <div class="content">
+            <h3 style="text-align:center">Frontend Developer</h3> 
+          <p style="text-align:justify">
+              i have 22 years old and i'm studiying Computer Science at polimi. 
+              Currently, in France, i'm an apprentice-engineer at Airbus Defence and Space.
+          </p>
+          <p><b>E-mail:</b> adrien.roques.31@outlook.fr</p>
+        </div>
+      </div>  
+    <div class="row3">
+        <div>
+            <h2>Sebastian Mayoral</h2>
+        </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/indice(1).png" style="border-radius: 50%" width="150px" height="150px">
+        <div class="content">
+            <h3 style="text-align:center">Frontend Developer</h3> 
+            <p style="text-align:justify">
+                I am 21 years old, I am from Colombia, I´m an international double degree student,
+                in Italy I´m studying the master degree in Computer Science and Engineering and 
+                in Colombia I have the degree in Industrial and Management Enginering.
+              </p>
+            <p><b>E-mail:</b> obandomayoral@gmail.com</p>
+            </div>
+          </div>   
+    <div class="row3">
+        <div>
+            <h2>Ivana Bosnić</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/site_5/Ivana.jpg" style="border-radius: 50%" width="150px" height="150px">
+        <div class="content">
+            <h3 style="text-align:center">Local Supervisor</h3> 
+            <p style="text-align:justify">
+                Assistant professor, Department of Control and Computer Engineering
+            </p>
+            <p><b>E-mail:</b> ivana.bosnic@fer.hr</p>
+          </div>
+        </div>  
+    <div class="row3">
+        <div>
+            <h2>Raffaela Mirandola</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/site_5/Raffaela.jpg" style="border-radius: 50%" width="150px" height="150px">
+        <div class="content">
+           <h3 style="text-align:center">Remote Supervisor</h3> 
+            <p style="text-align:justify">
+      Raffaela Mirandola received the Laurea degree in Computer Science from the University of Pisa and the Ph.D.
+       degree in Computer Science from the University of Roma â€œTor Vergataâ€, Italy.
+       She is currently assistant professor at the Politecnico di Milano. 
+            </p>
+            <p><b>E-mail:</b> raffaela.mirandola@polimi.it</p>
+          </div>
+        </div>  
+</div >
+<div style="float:right;">
+<hr>
+    <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Vision</h1> 
+<div class="general">
+  <p>
+      Our application will be used to help the students choose courses. For that, the student will be able to choose his home university and if he wants, his wanted destination (via city, country or faculty name), plus the courses he wants to select. He will be able to select them by typing keywords that represent the courses. Then the application will analyze his input and match it with input data from syllabuses to find him suitable faculties and courses.
+      Our vision besides data gathering and analysis, is to add a community so that students can see feedback from previous students at the proposed universities and maybe contact them to have more informations. But also we would like to introduce to the student what he can see in the chosen city, the night life, the students’ occupations, etc      
+  </p>
+</div>
+<hr>
+<h1 style="margin:30px;color:rgb(47, 75, 131);">Our Motivation</h1> 
+<div class="general">
+  <p>
+      Csyllabus is part of a set of projects purposed in the <a href="http://score-contest.org/2018/projects/csyllabus.php"> SCORE </a> competition 2018 edition. 
+      The SCORE Contest is aimed at promoting and fostering software engineering in universities worldwide. 
+      Student teams from all over the world participate in a competition for students from undergraduate to master's level.
+      Each team will develop a software project chosen from a list of projects proposed and sponsored by program committee members.  
+      In order to accommodate a wide range of academic calendars, the SCORE 2018 Contest will run from May 2017 to January 2018.
+      Finalist teams will be invited to <a href="https://conf.researchr.org/home/icse-2018/">ICSE</a> 2018 in Gothenburg, Sweden.   
+  </p>
+</div>
+</div>
+<app-footer></app-footer>
