--- a/frontend/csyllabus/src/app/app.component.html
+++ b/frontend/csyllabus/src/app/app.component.html
@@ -1,4 +1,7 @@
 
+<div class="core-header" >
+      <app-navbar></app-navbar>
+</div>
 <div style="text-align:center">
   <router-outlet></router-outlet>
 </div>
