--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.css
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.css
@@ -43,3 +43,14 @@
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.33);
 }
+
+.custom-card-title{
+  font-size: 24px;
+  float: left;
+  margin-top: 80px;
+  color: white;
+  background-color: rgb(85,118,184);
+  padding: 6px 30px;
+  z-index:2;
+  position:relative;
+}
