--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,9 +1,9 @@
 
 <div class="bgexplorer">
-  <div class="chooser">
-  <div class="col-md-12">
-    <!--<p class="chooser-heading-" style="font-size: 34px; text-align: center;">I want to</p>-->
-    <br><br><br><br><br><br><br>
+  <div class="chooser" style="background-color:rgba(255,255,255,0.7)">
+  <div class="col-md-12" >
+    <p id="typewriter" class="chooser-heading-"  style="font-size: 34px; text-align: center;"></p>
+    <br>
   </div>
   <div class="col-md-3">
 &nbsp;
@@ -57,8 +57,8 @@
   </div>
   <div id="explorer-result-component">
     <br>
-    <app-result-cards *ngIf="explorerTab" [courses]="explorerResult"></app-result-cards>
-    <app-result-cards-comparator *ngIf="comparatorTab" [courses]="comparatorResult"></app-result-cards-comparator>
+    <app-result-cards *ngIf="chooserSelectedExplorer" [courses]="explorerResult"></app-result-cards>
+    <app-result-cards-comparator *ngIf="chooserSelectedComparator" [courses]="comparatorResult"></app-result-cards-comparator>
 
   </div>
 </div>
