--- a/frontend/csyllabus/src/app/core/result-cards/course-dialog/course-dialog.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards/course-dialog/course-dialog.component.html
@@ -21,10 +21,12 @@
           <br><br>
           <form class="example-form" style="width: 90%;">
             <mat-form-field class="example-full-width" style="width: 80%;">
-              <input matInput placeholder="Full page url:" disabled value="https://csyllabus.com/demo/course/{{course.id}}">
+              <input matInput placeholder="Full page url:" disabled
+                     value="https://csyllabus.com/demo/course/{{course.id}}">
             </mat-form-field>
-            <a  mat-icon-button target="_blank" href="https://csyllabus.com/demo/course/{{course.id}}">
-             <mat-icon>link</mat-icon>  </a>
+            <a mat-icon-button target="_blank" href="https://csyllabus.com/demo/course/{{course.id}}">
+              <mat-icon>link</mat-icon>
+            </a>
           </form>
         </div>
 
