--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -187,3 +187,18 @@ max-width: 500px;
 margin-top: 0;
 font-weight: bold;
 }
+
+.custom-card-title{
+  font-size: 24px;
+  float: left;
+  margin-top: 80px;
+  color: white;
+  background-color: rgb(85,118,184);
+  padding: 6px 30px;
+  z-index:2;
+  position:relative;
+}
+
+.example-card {
+  height: 350px;
+}
