--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,64 +1,64 @@
-
 <div class="bgexplorer">
   <div class="chooser" style="background-color:rgba(255,255,255,0.7)">
-  <div class="col-md-12" >
-    <p id="typewriter" class="chooser-heading-"  style="font-size: 34px; text-align: center;"></p>
-    <br>
-  </div>
-  <div class="col-md-3">
-&nbsp;
-  </div>
-  <div class="col-md-3">
-    <div id="chooser-explorer-card" [ngClass]="{'chooser-card-active': chooserSelectedExplorer }"
-         (click)="chooserSelect('explorer')">
-      <div class="chooser-card-text">
-        <p class="chooser-card-title" >EXPLORE</p>
-        <p class="chooser-card-subtitle">courses from a university</p>
+    <div class="col-md-12">
+      <p id="typewriter" class="chooser-heading-" style="font-size: 34px; text-align: center;"></p>
+      <br>
+    </div>
+    <div class="col-md-3">
+      &nbsp;
+    </div>
+    <div class="col-md-3">
+      <div id="chooser-explorer-card" [ngClass]="{'chooser-card-active': chooserSelectedExplorer }"
+           (click)="chooserSelect('explorer')">
+        <div class="chooser-card-text">
+          <p class="chooser-card-title">EXPLORE</p>
+          <p class="chooser-card-subtitle">courses from a university</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div id="chooser-comparator-card" [ngClass]="{'chooser-card-active': chooserSelectedComparator }"
+           (click)="chooserSelect('comparator')">
+        <div class="chooser-card-text">
+          <p class="chooser-card-title">COMPARE</p>
+          <p class="chooser-card-subtitle">courses using our algorithm</p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-md-3">
-    <div id="chooser-comparator-card" [ngClass]="{'chooser-card-active': chooserSelectedComparator }"
-         (click)="chooserSelect('comparator')">
-      <div class="chooser-card-text">
-        <p class="chooser-card-title" >COMPARE</p>
-        <p class="chooser-card-subtitle">courses using our algorithm</p>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div id="filters-container" [style.background] *ngIf="chooserSelectedExplorer || chooserSelectedComparator">
+  <div id="filters-container" [style.background] *ngIf="chooserSelectedExplorer || chooserSelectedComparator">
 
-  <div  class="bg-container custom-scrollbar" align="center">
-<img class="variable-background" *ngIf="backgroundImage && backgroundImage != ''" [src]="backgroundImage">
+    <div class="bg-container custom-scrollbar" align="center">
+      <img class="variable-background" *ngIf="backgroundImage && backgroundImage != ''" [src]="backgroundImage">
 
-<div class="container">
-     <app-explorer (explorerResult)="fetchExplorerResult($event)"
+      <div class="container">
+        <app-explorer (explorerResult)="fetchExplorerResult($event)"
                       (backgroundImage)="changeBackgroundImage($event)"
-     *ngIf="chooserSelectedExplorer"></app-explorer>
+                      *ngIf="chooserSelectedExplorer"></app-explorer>
 
-    <app-comparator (comparatorResult)="fetchComparatorResult($event)"
-                      (backgroundImage)="changeBackgroundImage($event)"
-     *ngIf="chooserSelectedComparator"
-    ></app-comparator>
-</div>
-
-    <!--<mat-tab-group (selectedTabChange)="changeResultCard($event)" mat-stretch-tabs >
-      <mat-tab label="Explorer">
-
-      </mat-tab>
-      <mat-tab label="Comparator" >
         <app-comparator (comparatorResult)="fetchComparatorResult($event)"
-                      (backgroundImage)="changeBackgroundImage($event)"></app-comparator>
-      </mat-tab>
-    </mat-tab-group>-->
-  </div>
+                        (backgroundImage)="changeBackgroundImage($event)"
+                        *ngIf="chooserSelectedComparator"
+        ></app-comparator>
+      </div>
+
+      <!--<mat-tab-group (selectedTabChange)="changeResultCard($event)" mat-stretch-tabs >
+        <mat-tab label="Explorer">
+
+        </mat-tab>
+        <mat-tab label="Comparator" >
+          <app-comparator (comparatorResult)="fetchComparatorResult($event)"
+                        (backgroundImage)="changeBackgroundImage($event)"></app-comparator>
+        </mat-tab>
+      </mat-tab-group>-->
+    </div>
   </div>
   <div id="explorer-result-component">
     <br>
     <app-result-cards *ngIf="chooserSelectedExplorer" [courses]="explorerResult"></app-result-cards>
-    <app-result-cards-comparator *ngIf="chooserSelectedComparator" [courses]="comparatorResult"></app-result-cards-comparator>
+    <app-result-cards-comparator *ngIf="chooserSelectedComparator"
+                                 [courses]="comparatorResult"></app-result-cards-comparator>
 
   </div>
 </div>
